# paddy-yield-risk-early-warning

./: .gitignore  EXPERIMENT_MANIFEST.md  Makefile  README.md  business_impact.md  caveats_and_lessons.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
data/input/: carob_amazxa.csv
data/metadata/: carob_amazxa_meta.csv  data_dictionary_carob_amazxa.csv  data_dictionary_paddy.csv
docs/: business_impact.md  caveats_and_lessons.md  interpretability_story.md
notebooks/: Paddy_EDA.ipynb
outputs/: run_all_manifest.json
outputs/ablation_eval/: ablation_metrics.csv
outputs/baseline/: feature_importances.csv  metrics.json
outputs/carob_baseline/: group_holdout_metrics.csv  logo_fold_metrics.csv  logo_summary_metrics.csv  missingness_audit.csv  trial_profile.csv
outputs/carob_feature_prepare/: actionability_role_map.csv  actionability_role_summary.csv  categorical_quality_overview.csv  (+15 more)
scripts/: README.md  run_ablation_eval.py  run_baseline.py  run_carob_causal_pilot.py  run_carob_interpretability.py  run_carob_interpretability_report.py  run_carob_model_compare.py  run_carob_model_compare_excl_benin.py  run_carob_model_tune.py  run_carob_model_tune_top2.py  run_carob_rule_causal_aipw.py  run_causal_pilot.py  run_feature_prepare.py  run_interpretability_report.py  run_model_compare.py  run_model_select_tune.py
tests/: test_ablation_eval_helpers.py  test_baseline_helpers.py  test_carob_causal_helpers.py  test_carob_common_helpers.py  test_carob_feature_prepare_helpers.py  test_carob_interpretability_helpers.py  test_carob_model_compare_helpers.py  test_carob_rule_causal_aipw_helpers.py  test_causal_pilot_helpers.py  test_feature_prepare_helpers.py  test_interpretability_report_helpers.py  test_model_compare_helpers.py  test_model_select_tune_helpers.py
(+142 files in other folders)
