[project]
name = "paddy-yield-ml-enterprise"
version = "0.1.0"
description = "Enterprise-ready CAROB rice decision-support pipelines with interpretable modeling and causal diagnostics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2.8",
  "lightgbm>=4.6.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "streamlit>=1.41.0",
  "xgboost>=3.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paddy_yield_ml"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  "notebooks",
  "outputs",
  "presentation",
  "results",
  "baseline.py",
  "feature_prepare.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
